# teamspatzenhirn_simulator_interface

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yml
adtf/: CMakeLists.txt
adtf/depth/: CMakeLists.txt  DummyDevice.h  SimulatorDepthFilter.cpp  SimulatorDepthFilter.h
adtf/hardware/: CMakeLists.txt  SimulatorHardwareOutput.cpp  SimulatorHardwareOutput.h
adtf/image/: CMakeLists.txt  DummyDevice.cpp  DummyDevice.h  SimulatorImageFilter.cpp  SimulatorImageFilter.h
adtf/spatz/: CMakeLists.txt  SimulatorSpatzInput.cpp  SimulatorSpatzInput.h
adtf/visual/: CMakeLists.txt  SimulatorVisualizationOutput.cpp  SimulatorVisualizationOutput.h
lib/: CMakeLists.txt  SimCameraCalib.cpp  SimCameraCalib.hpp  SpatzMultiplexer.h  shm_ids.h  shmcomm.h
ros/: CMakeLists.txt
ros/depth/: CMakeLists.txt  SimulatorDepthNode.cpp  main.cpp
ros/hardware/: CMakeLists.txt  SimulatorHardwareNode.cpp  SimulatorHardwareNode.hpp  SimulatorHardwareOutNode.cpp  SimulatorHardwareOutNode.hpp  main.cpp
ros/hardwareOut/: CMakeLists.txt  SimulatorHardwareOutNode.cpp
ros/image/: CMakeLists.txt  SimulatorImageNode.cpp  SimulatorImageNode.hpp
ros/spatz/: CMakeLists.txt  SimulatorSpatzNode.cpp  SimulatorSpatzNode.hpp
ros/visualOut/: CMakeLists.txt  SimulatorVisualOutNode.cpp  SimulatorVisualOutNode.hpp  main.cpp
src/lib/: CMakeLists.txt  SpatzMultiplexer.cpp  shm_ids.h  shmcomm.cpp
src/ros/: CMakeLists.txt
src/ros/depth/: CMakeLists.txt  SimulatorDepthNode.cpp  SimulatorDepthNode.hpp
src/ros/hardwareOut/: CMakeLists.txt  SimulatorHardwareOutNode.hpp
src/ros/image/: CMakeLists.txt  SimulatorImageNode.cpp  SimulatorImageNode.hpp  main.cpp
src/ros/spatz/: CMakeLists.txt  SimulatorSpatzNode.cpp  SimulatorSpatzNode.hpp  main.cpp
src/ros/visualOut/: CMakeLists.txt  SimulatorVisualOutNode.cpp  SimulatorVisualOutNode.hpp
src/test/standalone/: CMakeLists.txt  simulatorExtrinsic.main.cpp
test/standalone/: CMakeLists.txt  simulatorExtrinsic.main.cpp
